fix submenu gap stylings components

--- a/src/app/assets/styles/AdminIndex.module.css
+++ b/src/app/assets/styles/AdminIndex.module.css
@@ -28,7 +28,7 @@
 
   .quick-links {
     display: flex;
-    gap: 20px;
+    gap: 5px;
     margin-bottom: 20px;
     justify-content: center;
   }
